<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_realty"
            android:icon="@drawable/menu_add_home"
            android:title="@string/menu_add_realty"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_show_my_realty"
            android:icon="@drawable/all_reals_icon"
            android:title="@string/my_reals"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/menu_log_out"
            android:title="@string/menu_logout"
            android:iconTint="@android:color/white"/>
    </group>
</menu>