<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/realty_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/realry_address"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/cadetBlue"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/realty_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/realty_address"
            android:text="@string/search_city_hint"
            android:textSize="18dp"
            android:textColor="@color/darkSlateGray"
            android:paddingStart="10dp"
            />

        <TextView
            android:id="@+id/realty_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/realty_city"
            android:text="@string/priceRealty"
            android:textSize="25dp"
            android:textColor="@color/cadetBlue"
            android:paddingStart="10dp"
            />

        <Button
            android:id="@+id/remove_real_button"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/realty_price"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            android:backgroundTint="@color/cadetBlue"
            android:padding="10dp"
            android:text="@string/remove_real"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>