<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Settings_Activity">

    <RelativeLayout
        android:id="@+id/settings_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_settings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/cadetBlue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Toolbar
                android:id="@+id/toolbar_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/close_settings_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/close_settings"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_alignParentStart="true"
                        android:textAllCaps="true"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/save_settings_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_settings"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_marginEnd="15dp"
                        android:layout_alignParentEnd="true"
                        android:textAllCaps="true"
                        android:textStyle="bold|italic" />
                </RelativeLayout>

            </Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_account_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/user_profile_image"
            android:layout_below="@+id/app_bar_settings"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/settings_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_account_image"
            android:hint="@string/settings_lastname"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_design" />

        <EditText
            android:id="@+id/settings_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_last_name"
            android:hint="@string/settings_firstname"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_design" />

        <EditText
            android:id="@+id/settings_middle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_first_name"
            android:hint="@string/settings_middlename"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_design" />

        <EditText
            android:id="@+id/settings_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_middle_name"
            android:inputType="phone"
            android:hint="@string/settings_phone"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_design" />

        <EditText
            android:id="@+id/settings_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_phone"
            android:inputType="textEmailAddress"
            android:hint="@string/settings_email"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_design" />

        <Button
            android:id="@+id/rewrite_password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_below="@+id/settings_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/cadetBlue"
            android:padding="10dp"
            android:text="@string/change_pass"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="900dp" />

    </RelativeLayout>

</ScrollView>
