<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addRealty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        tools:context=".User.Add_realty_Activity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/cadetBlue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="359dp"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/addRealty"
            android:textAlignment="center"
            android:textColor="@color/darkSlateGray"
            android:textColorLink="@color/darkSlateGray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/select_realty_image"
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="96dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/select_realty_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

        <EditText
            android:id="@+id/inputCityField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_design"
            android:hint="@string/inputCity"
            android:focusableInTouchMode="true"
            android:inputType="text"
            android:padding="8dp"
            android:text=""
            android:textColor="@color/teal"
            android:textColorHint="@color/cadetBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_realty_image" />

        <EditText
            android:id="@+id/inputAddressField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_design"
            android:hint="@string/inputAddress"
            android:focusableInTouchMode="true"
            android:inputType="text"
            android:padding="8dp"
            android:text=""
            android:textColor="@color/teal"
            android:textColorHint="@color/cadetBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCityField" />

        <EditText
            android:id="@+id/inputRoomsField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/inputCityField"
            android:background="@drawable/input_design"
            android:hint="@string/inputRooms"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:padding="8dp"
            android:text=""
            android:textColor="@color/teal"
            android:textColorHint="@color/cadetBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAddressField" />

        <EditText
            android:id="@+id/inputAresField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/inputRoomsField"
            android:background="@drawable/input_design"
            android:hint="@string/inputArea"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:padding="8dp"
            android:text=""
            android:textColor="@color/teal"
            android:textColorHint="@color/cadetBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputRoomsField" />

        <EditText
            android:id="@+id/inputFloorField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/inputAresField"
            android:background="@drawable/input_design"
            android:hint="@string/inputStage"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:padding="8dp"
            android:text=""
            android:textColor="@color/teal"
            android:textColorHint="@color/cadetBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAresField" />

        <EditText
            android:id="@+id/inputPriceField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/inputFloorField"
            android:background="@drawable/input_design"
            android:hint="@string/priceRealty"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:padding="8dp"
            android:text=""
            android:textColor="@color/teal"
            android:textColorHint="@color/cadetBlue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputFloorField" />

        <EditText
            android:id="@+id/inputAboutField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputPriceField"
            android:background="@drawable/input_design"
            android:hint="@string/inputAbout"
            android:focusableInTouchMode="true"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textColor="@color/teal"
            android:textColorHint="@color/cadetBlue"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPriceField" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="120dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/teal"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAboutField"
            tools:ignore="SmallSp" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="950dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>