<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cadetBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="279dp"
        android:layout_height="57dp"
        android:layout_marginTop="132dp"
        android:text="@string/autorisation"
        android:textAlignment="center"
        android:textColor="@color/darkSlateGray"
        android:textColorLink="@color/darkSlateGray"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:layout_marginTop="424dp"
        android:backgroundTint="@color/teal"
        android:text="@string/loginb"
        android:textSize="12sp"
        app:cornerRadius="1dp"
        app:iconTint="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/teal" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="52dp"
        android:textSize="12sp"
        android:backgroundTint="@color/teal"
        android:text="@string/signupb"
        app:cornerRadius="1dp"
        app:iconTint="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/teal" />

</androidx.constraintlayout.widget.ConstraintLayout>